Revision history for DBIx::Class::Sims (ordered by revision number).

0.300200 Apr 27 2016 08:00:00 PDT
   - Refactor the codebase into a prepper and a runner. The runner will make it
     easier to extend the codebase and add more functionality.

0.300102 Apr 05 2016 08:00:00 PDT
   - Fix bug where the check to ensure different parents specifying the same
     child will link to it was too expansive.
   - Warn the seed used when a failure throws an error.
   - Improve test suite output to not show the outputted warning on failure.

0.300101 Apr 01 2016 11:30:00 PDT
   - Fix mistake where I used "limit" instead of "rows" (Thanks gtermars!)

0.300100 Mar 21 2016 09:00:00 PDT
   - THIS RELEASE UPGRADES THE MINIMUM PERL VERSION
   - Upgrade Perl minimum version from 5.8.4 to 5.10.2
     - CPANTS was claiming breakage on 5.8.x and no need to support it
   - Clone the provided arguments because we handle them destructively
   - Enable forcing creation of parents with a __META__ field
   - Use {limit => 1} when searching for the first parent

0.300009 Mar 17 2016 09:00:00 PDT
   - Hoist DateTime-ish strings into DateTime objects as needed.

0.300008 Mar 15 2016 14:00:00 PDT
   - Force a reload from database of all rows returned by load_sims()
   - format all DateTime-like values that are passed in per the storage's
     datetime_parser().

0.300007 Mar 15 2016 12:00:00 PDT
   - Finalize the ordering within create_item.
   - Properly handle the case where a child row specifies a parent that has
     rows of a different child table. (Previously, the child rows would have
     been part of the search for the parent, resulting in a wonky search.)

0.300006 Mar 10 2016 06:00:00 PDT
   - Move the preprocess hook back. This was a horrible change.

0.300005 Mar 09 2016 19:00:00 PDT
   - Move the preprocess hook to before the handling of FKs. This allows for the
     horribly hacky disabling of a FK if your data model requires such things.

0.300004 Mar 05 2016 19:00:00 PDT